Add licence and profile links

--- a/html.html
+++ b/html.html
@@ -15,10 +15,9 @@
 <div class="container" ng-app="wikiViewer">
   <div class="jumbotron">
     <h1>Wikipedia Viewer</h1>
-    <p>Written by Boris Wong 2017-06-07</p>
+    <p>Written by <a target="_blank" href="https://github.com/pbrn46/">Boris Wong</a>, 2017-06-06</p>
     <p>Project based off of FreeCodeCamp challenge.</p>
   </div>
-
 
   <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" >Random Article</a>
 
@@ -47,5 +46,4 @@
       </div>
     </div>
   </div>
-
 </div>
